fix(DataPoint): Clipping in firefox

--- a/src/charts/data-point/DataPoints.css
+++ b/src/charts/data-point/DataPoints.css
@@ -4,6 +4,7 @@
 
 .ax-data-points {
   display: block;
+  overflow: visible;
 }
 
 .ax-data-point {
